Fixed the alignment of card in the mobile view

--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -4,7 +4,6 @@
   flex-direction: row;
   padding: 10px;
   background-color: #263238;
-  width: 100%;
 }
 
 /** Search **/
@@ -20,7 +19,8 @@
 
 /** To remove cross icon **/
 
-[type="search"]::-webkit-search-cancel-button, [type="search"]::-webkit-search-decoration {
+[type="search"]::-webkit-search-cancel-button,
+[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
   appearance: none;
 }
@@ -81,12 +81,14 @@
 
 /* Smaller devices */
 
-@media screen and (max-width:600px) {
+@media screen and (max-width: 600px) {
   .inner-container {
     flex-direction: column;
     justify-content: space-between;
   }
-  .search-container, .login-button, .profile-button {
+  .search-container,
+  .login-button,
+  .profile-button {
     align-self: flex-start !important;
     margin-top: 15px !important;
   }
